gts-macros/tests/compile_fail/instance_segment_ends_with_tilde.rs
//! Test: id ends with ~ in gts_well_known_instance (schema/type, not instance)

use gts_macros::gts_well_known_instance;

#[gts_well_known_instance(
    dir_path = "instances",
    id = "gts.x.core.events.topic.v1~"
)]
const ORDERS_TOPIC: &str = r#"{"name": "orders"}"#;

fn main() {}
